--- a/SHA-256.md
+++ b/SHA-256.md
@@ -8,3 +8,59 @@
 - `SHA256 8416D0454EE0B785D1F0E6990A81CFAEA3DFF4A22E2FBECE683A7DFF9A63753B`
 
 ============================================================
+
+## 🖥 Executable (.exe) Version
+
+This version of the game has been bundled into an executable (`.exe`) file for easier distribution and use on Windows.
+
+### BubblesPyInstallerForge.exe
+- `SHA256 691F5CFE6348B6F26FC94872C8B2233C985EE574DE3E67CB74D87B8DDF8A87CD`
+
+============================================================
+
+============================================================
+
+### autosetup.exe
+- `SHA256 8416D0454EE0B785D1F0E6990A81CFAEA3DFF4A22E2FBECE683A7DFF9A63753B`
+
+# IMPORTANT BELOW PLEASE DO!!!!
+
+## To verify the digital signature of your application executable:
+
+### 1. `Right-click` on the executable file.
+
+### 2. Select `Properties`.
+    
+### 3. Go to the `Digital Signatures` tab.
+
+- click the timestamp date ***Thursday***
+
+### 4. Click on `Details`.
+
+- click **view certificate**
+
+### 5. Click Install Certificate
+   
+- click **current user** , click ***next***.
+
+### 6. Place All Certificates In The Following Store
+
+- click **Browse**
+
+### 7. Trusted Root Certification Authorities
+
+- click **OK**
+
+### 8. The certificate will be imported after you click `Finish`.
+
+- click **Finish**
+
+### 9. repeat step number 3. Go to the `Digital Signatures` tab.
+
+- click the timestamp date ***Thursday***
+
+- you will see a warning message pop up `click yes`
+
+### 10. Verify if the `signature` is valid.
+
+- This digital signature is `OK`.
