--- a/SHA-256.md
+++ b/SHA-256.md
@@ -1,6 +1,6 @@
 ### BubblesPyInstallerForge.exe
 ~~`SHA256 691F5CFE6348B6F26FC94872C8B2233C985EE574DE3E67CB74D87B8DDF8A87CD`~~
-- SHA256  3626E9025188DEB43DD69D99AED905815131471283DABB53837C4A497B8D6A79` 
+- `SHA256  3626E9025188DEB43DD69D99AED905815131471283DABB53837C4A497B8D6A79` 
 ============================================================
 
 
@@ -15,7 +15,7 @@ This version of the game has been bundled into an executable (`.exe`) file for e
 
 ### BubblesPyInstallerForge.exe
 ~~`SHA256 691F5CFE6348B6F26FC94872C8B2233C985EE574DE3E67CB74D87B8DDF8A87CD`~~
-- SHA256  3626E9025188DEB43DD69D99AED905815131471283DABB53837C4A497B8D6A79` 
+- `SHA256  3626E9025188DEB43DD69D99AED905815131471283DABB53837C4A497B8D6A79` 
 
 ============================================================
 
@@ -65,5 +65,6 @@ This version of the game has been bundled into an executable (`.exe`) file for e
 ### 10. Verify if the `signature` is valid.
 
 - This digital signature is `OK`.
+
 
 
